--- a/ParkingDataSetup.csproj
+++ b/ParkingDataSetup.csproj
@@ -9,6 +9,13 @@
     <PackageReference Include="IronPython" Version="2.7.11" />
     <PackageReference Include="IronPython.Interpreter" Version="2.7.4" />
     <PackageReference Include="IronPython.StdLib" Version="2.7.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\ParkingSampleData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
