Updated digital twin craetion data

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
         "Account": "",
         "Key": "",
         "DatabaseName": "Parking",
-        "ContainerName": "ParkingSlots"
+        "ParkingSlotsContainerName": "ParkingSlots",
+        "BookingContainerName": "Booking"
     },
     "DigitalTwinInstanceUrl": "",
     "AzureMapsSubscriptionKey": ""
